fix flickering p2

--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,10 @@
   -webkit-overflow-scrolling: touch;
 }
 
+.snap-scroll-container.is-smooth-scrolling {
+  scroll-snap-type: none;
+}
+
 .snap-section {
   display: flex;
   height: 100%;
